# project-euler-haskell

./: LICENSE  README.md  project-euler-haskell.cabal
Answer/: answer1.hs  answer12.hs  answer16.hs  answer9.hs
Euler/: Problem1.hs  Problem12.hs  Problem16.hs  Problem9.hs
Test/: Test1.hs  Test12.hs  Test16.hs  Test9.hs
