name:                project-euler-haskell
version:             0.1.0.0
synopsis:            Solutions to Project Euler problems
description:         This package contains solutions to Project Euler problems.
homepage:            http://github.com/FranklinChen/project-euler-haskell
bug-reports:         http://github.com/FranklinChen/project-euler-haskell/issues
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2012 Franklin Chen
author:              Franklin Chen <franklinchen@franklinchen.com>
maintainer:          franklinchen@franklinchen.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  .gitignore,
                     README.md

source-repository head
  type:              git
  location:          http://github.com/FranklinChen/project-euler-haskell.git

library
  build-depends:     base
  exposed-modules:   Euler.Problem1,
                     Euler.Problem9

executable answer1
  hs-source-dirs:    Answer
  main-is:           answer1.hs
  build-depends:     base,
                     project-euler-haskell

executable answer9
  hs-source-dirs:    Answer
  main-is:           answer9.hs
  build-depends:     base,
                     project-euler-haskell

-- detailed-0.9 problem integrating with HUnit?
test-suite test-problem1
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Test
  main-is:           Test1.hs
  build-depends:     base,
                     project-euler-haskell,
                     HUnit,
                     QuickCheck,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     test-framework-th

test-suite test-problem9
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Test
  main-is:           Test9.hs
  build-depends:     base,
                     project-euler-haskell,
                     HUnit,
                     QuickCheck,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     test-framework-th
